fix dark mode search mode selection as well

--- a/css/style.css
+++ b/css/style.css
@@ -1454,6 +1454,13 @@ body.dark-mode .section ul li:hover {
     border: 1px solid #3a2a45;
 }
 
+body.dark-mode .section ul li:has(.current-highlight) {
+    background: linear-gradient(145deg, #4e3b5b, #3a2a45);
+    transform: scale(1.01);
+    transition: all 0.3s ease;
+    border: 1px solid #3a2a45;
+}
+
 body.dark-mode .project-button {
     background: linear-gradient(145deg, #46618a, #2f3e55) !important;
     color: #f0f0f0;
